<resources>
    <string name="app_name">Astrotalk</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="underline_skip"><u>Skip</u></string>
    <string name="no_internet_connection_found_ncheck_your_connection">No Internet\n</string>
    <string name="no_result">No Result</string>
    <string name="vedic_astrology">Vedic Astrologers</string>
    <string name="prasna_shastra_astrologers">Career Astrologers</string>
    <string name="tajika">Marriage  Astrologers</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="pooja_name_format">%1$s %2$s</string>
    <string name="pooja_name_label">Pooja Name: </string>
    <string name="love_astrology">Love Astrologers</string>
    <string name="todo">TODO</string>
    <string name="write_message_here">Write message here</string>
    <string name="user_reviews">User Reviews</string>
    <string name="astrologer_profile">Astrologer Profile</string>
    <string name="call_to_astrologer">Call to Astrologer</string>
    <string name="chat_with_astrolger">Chat with Astrologer</string>
    <string name="astrologers">Astrologers</string>
    <string name="comming_soon">Coming soon</string>
    <string name="book_now">Book Now</string>
    <string name="pooja_title">Pooja Title</string>

    <string name="search_here">Search Here</string>
    <string name="pooja_near_you">Pooja Near You</string>
    <string name="proceed">Proceed</string>
    <string name="google_pay">Google Pay</string>
    <string name="select_payment_option">Select Payment Option</string>
    <string name="total_payment">Total Payment :</string>
    <string name="your_booked_pooja">Pooja booked</string>
    <string name="see_details">See Details</string>
    <string name="pooja_details">Pooja Details</string>
    <string name="msg_logout">Are you sure you want to logout</string>
    <string name="login_required">Login Required</string>
    <string name="book_your_first_pooja">Book your first pooja</string>
    <string name="empty_msg">Start by booking your first Pooja session to begin your spiritual journey.</string>
    <string name="cancel_booking">Cancel booking</string>
    <string name="are_you_sure_you_want_to_cancel">Are you sure you want to cancel?</string>
    <string name="enter_room_name">Enter Session Name</string>
    <string name="create_room_or_join_room">Create or Join Session</string>
    <string name="hello">hello</string>
    <string name="sign_in_login">Sign in / Login</string>
    <string name="login_chat">Login to Chat with Astrologers</string>
    <string name="login_call">Login to call with Astrologers</string>
    <string name="login_pooja">Login to Book Pooja</string>
    <string name="select_call_type">Select Call Type</string>
    <string name="imp_msg">Before You Start the Session🤳</string>
    <string name="imp_notice">
    Step 1 : Save the astrologer\'s number in WhatsApp or send them a message.&#10; \n
        \n
    Step 2 : Once the call starts, invite them by sharing the Session link.&#10;\n
        \n
    Step 3 : You can share the link via WhatsApp or any other social platform.
</string>
    <string name="audio_call">Audio Call 📞</string>
    <string name="video_call">Video Call 🤳</string>
    <string name="msg_empty_num">Not able to get number</string>
    <string name="please_follow_below_instruction">Please Follow below instruction</string>
    <string name="start_video_session">Start Video Session</string>
    <string name="enter_your_password">Enter your Password</string>
</resources>