<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PoojaBookedActivity">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/app_theme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivMenu"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/back"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txtActionBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/your_booked_pooja"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txPackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="@dimen/_9ssp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txtActionBarTitle"
            app:layout_constraintStart_toStartOf="@+id/txtActionBarTitle"
            app:layout_constraintTop_toBottomOf="@+id/txtActionBarTitle"
            tools:text="Pack Name" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSearchView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_31sdp"
        android:layout_marginHorizontal="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/shape_search_round_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout2">

        <ImageView
            android:id="@+id/ivSearchIcon"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_38sdp"
            android:background="@drawable/shape_search_round_corner"
            android:backgroundTint="@color/c_F5F5F5"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/search_here"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/_12ssp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivSearchIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivRemove"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_remove"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/ivSearchIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txNoResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/no_result"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clSearchView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPoojaData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:nestedScrollingEnabled="false"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_100sdp"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clSearchView"
        tools:listitem="@layout/item_pooja_booked" />


    <TextView
        android:id="@+id/txtEmptyMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:fontFamily="@font/poppins_regular"
        android:paddingHorizontal="@dimen/_5sdp"
        android:text="@string/empty_msg"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnBook"
        app:layout_constraintEnd_toEndOf="@+id/btnBook"
        app:layout_constraintStart_toStartOf="@+id/btnBook" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btnbg"
        android:fontFamily="@font/poppins_bold"
        android:paddingHorizontal="@dimen/_40sdp"
        android:text="@string/book_your_first_pooja"
        android:textAllCaps="false"
        android:textSize="@dimen/_12ssp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>