<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".activity.VideoCallingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/app_theme"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/Back_Iv"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/back"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivSideMenu"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:padding="@dimen/_4sdp"

            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txtActionBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/start_video_session"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/Back_Iv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/Back_Iv" />

        <TextView
            android:id="@+id/txPackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="@dimen/_9ssp"
            android:visibility="gone"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txtActionBarTitle"
            app:layout_constraintStart_toStartOf="@+id/txtActionBarTitle"
            app:layout_constraintTop_toBottomOf="@+id/txtActionBarTitle"
            tools:text="Pack Name" />

        <ImageView
            android:id="@+id/ivDone"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:padding="@dimen/_8sdp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/Back_Iv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Back_Iv" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_bar">

        <TextView
            android:id="@+id/txvImp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="Important"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/txvSteps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_13sdp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/please_follow_below_instruction"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/text_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/edittext_border"
            android:fontFamily="@font/poppin_medium"
            android:padding="12dp"
            android:text="@string/imp_notice"

            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/txvNotice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/imp_msg"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/txvPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_border"
            android:fontFamily="@font/poppins_regular"
            android:padding="10dp"
            tools:ignore="+1234567890"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12ssp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSaveContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btnbg"
                android:drawableEnd="@drawable/save_ic"
                android:fontFamily="@font/poppins_bold"
                android:text="Save number"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_10ssp" />

            <Button
                android:id="@+id/btnWhatsApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/btnbg"
                android:drawableEnd="@drawable/whatsapp_ic"
                android:fontFamily="@font/poppins_bold"
                android:text="WhatsApp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>


        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_bg"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/create_room_or_join_room"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/edEnterRoomName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edittext_border"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:hint="@string/enter_room_name"
            android:paddingVertical="@dimen/_5sdp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/btnbg"
                android:fontFamily="@font/poppins_bold"
                android:text="Start Session"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_10ssp" />

            <Button
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:background="@drawable/btnbg"
                android:fontFamily="@font/poppins_bold"
                android:text="No"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_10ssp"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>