<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".fragmments.HomeFragment">

    <!-- Add an ImageView for the menu icon in the top left corner -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/dashActionbar"
        android:background="@color/app_theme"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivMenu"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:padding="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:src="@drawable/menu_ic"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtActionBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/astrologers"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txPackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="@dimen/_9ssp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/txtActionBarTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtActionBarTitle"
            app:layout_constraintTop_toBottomOf="@+id/txtActionBarTitle"
            tools:text="Pack Name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSearchView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_31sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginHorizontal="@dimen/_7sdp"
        android:background="@drawable/shape_search_round_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dashActionbar">

        <ImageView
            android:id="@+id/ivSearchIcon"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_38sdp"
            android:backgroundTint="@color/c_F5F5F5"
            android:fontFamily="@font/poppins_regular"
            android:hint="Search Here"
            android:inputType="text"
            android:background="@drawable/shape_search_round_corner"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/_12ssp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivSearchIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivMic"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_search_mic"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/ivSearchIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivRemove"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_remove"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/ivSearchIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_90sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clSearchView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clDashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clSearchView">

            <TextView
                android:id="@+id/txNoResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                android:visibility="gone"
                android:text="@string/no_result"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtVedicAstrology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/vedic_astrology"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvVedicAstrology"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtVedicAstrology"
                app:spanCount="4"
                tools:listitem="@layout/item_category_list" />

            <TextView
                android:id="@+id/txtCareerAstro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/prasna_shastra_astrologers"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvVedicAstrology" />

            <!-- Add RecyclerView for Prasna Shastra -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCareerAstro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCareerAstro"
                app:spanCount="4"
                tools:listitem="@layout/item_category_list" />

            <!-- Repeat the above pattern for each category -->
            <!-- Tajika -->
            <TextView
                android:id="@+id/txtMarriageAstro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/tajika"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvCareerAstro" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMarriageAstro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtMarriageAstro"
                app:spanCount="4"
                tools:listitem="@layout/item_category_list" />

            <TextView
                android:id="@+id/txtLoveAstrology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/love_astrology"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvMarriageAstro" />

            <!-- Add RecyclerView for Love Astrology -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLoveAstrology"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLoveAstrology"
                app:spanCount="4"
                tools:listitem="@layout/item_category_list" />


            <androidx.constraintlayout.widget.Group
                android:id="@+id/groupOneNoInternet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
